# vicPinky_cpp

./: .gitignore  README.md  shopee_map.pgm  shopee_map.yaml
src/vic_pinky/: README.md
src/vic_pinky/doc/: 99-vic-pinky.rules  lidar_setup.md
src/vic_pinky/vicpinky_bringup/: CMakeLists.txt  package.xml
src/vic_pinky/vicpinky_bringup/config/: laser_filter.yaml
src/vic_pinky/vicpinky_bringup/include/vicpinky_bringup/: zlac_driver.hpp
src/vic_pinky/vicpinky_bringup/launch/: bringup.launch.xml  gazebo_multi_spwan.launch.xml
src/vic_pinky/vicpinky_bringup/src/: bringup.cpp
src/vic_pinky/vicpinky_description/: CMakeLists.txt
src/vic_pinky/vicpinky_description/urdf/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
src/vic_pinky/vicpinky_gazebo/launch/: launch_sim.launch.xml  spawn.launch.xml
src/vic_pinky/vicpinky_gazebo/models/factory_L1/: model.config
src/vic_pinky/vicpinky_gazebo/models/factory_L1/meshes/: model.material  wall_3.mtl
src/vic_pinky/vicpinky_gazebo/models/shopee_map/: model.config  model.sdf
src/vic_pinky/vicpinky_gazebo/models/shopee_map/meshes/: shopee.mtl
src/vic_pinky/vicpinky_gazebo/worlds/: empty.world  factory_L1.world  shopee_map.world
src/vic_pinky/vicpinky_navigation/: CMakeLists.txt  package.xml
src/vic_pinky/vicpinky_navigation/launch/: bringup_launch.xml  localization_launch.xml  map_view.launch.xml  nav2_view.launch.xml
src/vic_pinky/vicpinky_navigation/map/: factory.pgm  factory2.pgm
src/vic_pinky/vicpinky_navigation/params/: nav2_params.yaml
src/vic_pinky_1/vicpinky_bringup/: CMakeLists.txt
src/vic_pinky_1/vicpinky_bringup/include/vicpinky_bringup/: bringup.hpp
src/vic_pinky_1/vicpinky_bringup/launch/: gazebo_bringup.launch.xml
src/vic_pinky_1/vicpinky_bringup/src/: bringup.cpp  zlac_driver.cpp
src/vic_pinky_1/vicpinky_description/: package.xml
src/vic_pinky_1/vicpinky_description/launch/: display.launch.xml  upload.launch.xml
src/vic_pinky_1/vicpinky_description/rviz/: urdf_config.rviz
src/vic_pinky_1/vicpinky_description/urdf/: camera.xacro  lidar.xacro  robot_gazebo.xacro
src/vic_pinky_1/vicpinky_gazebo/: CMakeLists.txt  package.xml
src/vic_pinky_1/vicpinky_gazebo/models/desk/: model.sdf
src/vic_pinky_1/vicpinky_gazebo/models/factory_L1/: model.sdf
src/vic_pinky_1/vicpinky_gazebo/models/factory_L1/meshes/: wall_2.mtl
src/vic_pinky_1/vicpinky_navigation/launch/: bringup_launch.xml  map_building.launch.xml  navigation_launch.xml
src/vic_pinky_1/vicpinky_navigation/map/: factory.yaml  factory2.yaml
src/vic_pinky_1/vicpinky_navigation/params/: mapper_params.yaml  nav2_params.yaml
src/vic_pinky_1/vicpinky_navigation/rviz/: map_view.rviz  nav2_view.rviz
